--- a/templates/map.html
+++ b/templates/map.html
@@ -21,13 +21,13 @@
 
         <header class="header">
             <nav class="nav">
-                <a href="login.html" class="nav_logo">Spot</a>
+                <a href="login" class="nav_logo">Spot</a>
 
                 <ul class="nav_items">
                     <li class="nav_item">
-                        <a href="login.html" class="nav_link">Home</a>
-                        <a href="profile.html" class="nav_link">Profile</a>
-                        <a href="#" class="nav_link">Map</a>
+                        <a href="login" class="nav_link">Home</a>
+                        <a href="profile" class="nav_link">Profile</a>
+                        <a href="map" class="nav_link">Map</a>
                     </li>
                 </ul>
                 
