--- a/static/loginstyle.css
+++ b/static/loginstyle.css
@@ -76,13 +76,30 @@ a{
     background-position: center;
 }
 
-.form_container {
+.home::before{
+    content: '';
     position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 100;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.2s ease-out;
+}
+
+.home.show::before {
+    opacity: 1;
+    pointer-events: auto;
+}
+ 
+.form_container {
+    position: fixed;
     max-width: 320px;
     width: 100%;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1.2);
     z-index: 101;
     background: #fff;
     padding: 25px;
@@ -90,14 +107,24 @@ a{
     box-shadow: rgba(0, 0, 0, 0.1);
     opacity: 0;
     pointer-events: none;
+    transition: all 0.2s ease-out;
 }
 
-.home.show {
+.home.show .form_container{
     opacity: 1;
-    pointer-events: auto;
+    transform: translate(-50%, -50%) scale(1);
+    pointer-events: auto
 }
 
-.signup_form .form_container {
+.signup_form {
+    display: none;
+}
+
+.form_container.active .signup_form {
+    display: block;
+}
+
+.form_container.active .login_form {
     display: none;
 }
 
@@ -162,6 +189,7 @@ a{
 .input_box i.pw_hide {
     right: 0;
     font-size: 18px;
+    cursor: pointer;
 }
 
 .option_field {
