--- a/static/mapstyle.css
+++ b/static/mapstyle.css
@@ -1,8 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
 
-
-
 html {
     box-sizing: border-box;
     font-size: 100%;
@@ -13,6 +11,10 @@ html {
     font-family: "Poppins", sans-serif;
     margin: 0;
     padding: 0;
+}
+
+a {
+    text-decoration: none;
 }
 
 body {
