Added login form object to login file

--- a/templates/login.html
+++ b/templates/login.html
@@ -27,13 +27,39 @@
                 <button class="button" id="form-open"> Login </button>
             </nav>
         </header>
+
+    
+
+
+        
+
+
         
         <section class="home">
             <div class="form_container">
                 <i class="uil uil-times form_close"></i>
+
+
+                <form method="POST" action="">
+                    {{  form.hidden_tag()  }}
+                    {{  form.username  }}
+                    {{  form.password  }}
+                    {{  form.submit  }}
+                </form>
                 
                 <!-- Login Form -->
                 <div class="form login_form">
+
+
+<!-- 
+                    <form method="POST" action="">
+                        {{  form.hidden_tag()  }}
+                        {{  form.username  }}
+                        {{  form.password  }}
+                        {{  form.submit  }}
+                    </form> -->
+
+
                     <form action="#">
                         <h2>Login</h2>
                     
@@ -68,6 +94,15 @@
 
 
                 <div class="form signup_form">
+
+                    <!-- <form method="POST" action="">
+                        {{  form.hidden_tag()  }}
+                        {{  form.username  }}
+                        {{  form.password  }}
+                        {{  form.submit  }}
+                    </form> -->
+
+
                     <form action="#">
                         <h2>Register</h2>
                     
