--- a/templates/profile.html
+++ b/templates/profile.html
@@ -35,11 +35,11 @@
                 <div class="profile-box">
                     <img src="../static/menu.jpg" class="menu-icon">
                     <img src="../static/setting.jpg" class="setting-icon">
-                    <img src="../static/profile.jpg" class="profile-pic">"
+                    <img src="../static/profile.jpg" class="profile-pic">
                     <h3> Firstname Lastname</h3>
                     <p>Spot Member</p>
                 
-                    <button type="button-two"> Follow </button>
+                    <button type="button-two"> <b>Follow</b> </button>
                     <div class="profile-bottom">
                         <div class="followers">
                             <p> <b>Followers</b></p>
