--- a/static/loginstyle.css
+++ b/static/loginstyle.css
@@ -71,7 +71,7 @@ a{
     position: relative;
     height: 100vh;
     width: 100%;
-    background-image: url("cover.jpg");
+    background-image: url("space.jpg");
     background-size: cover;
     background-position: center;
 }
