--- a/static/profile.css
+++ b/static/profile.css
@@ -34,10 +34,16 @@ a{
     justify-content: space-between;
 
 }
-.nav_logo,
+.nav_logo {
+    color: #fdefda;
+}
 .nav_link,
 .button{    
-    color: #fff;
+    color: #fdefda;
+}
+
+.button .button-two {
+    font-size: 28px;
 }
 
 .nav_logo {
@@ -70,7 +76,7 @@ a{
     position: relative;
     height: 100vh;
     width: 100%;
-    background-image: url("cover.jpg");
+    background-image: url("space.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -84,7 +90,7 @@ a{
 .container {
     width: 100%;
     height: 100vh;
-    background-image: url("cover.jpg");
+    background-image: url("space.jpg");
     background-size: cover;
     background-position: center;
     display: flex;
@@ -94,13 +100,15 @@ a{
 
 .profile-box{
     /* top: -80px; */
-    background: white;
+    background: #034f1b;
+    border-color: white;
     text-align: center;
     padding: 40px 90px;
-    color: red;
+    color: #fdefda;
     position: relative;
     border-radius: 20px;
     margin-bottom: 20px;
+    box-shadow: #0dc0f1;
 }
 
 
@@ -131,14 +139,14 @@ a{
 .profile-pic{
     width: 150px;
     border-radius: 50%;
-    background: red;
+    background:  #fdefda;
     padding: 6px;
     margin-top: 40px;
 }
 
 .profile-bottom{
-    background: white;
-    color: #999;
+    background: #fdefda;
+    color: #fdefda;
     padding: 60px 0;
     margin-right: -90px;
     margin-left: -90px;
@@ -158,28 +166,28 @@ a{
     position: absolute;
     margin-top: -20px;
     left: 40px;
-    color: red;
+    color:  #034f1b;
 }
 
 .following{
     position: absolute;
     margin-top: -20px;
     right: 40px;
-    color: red;
+    color:  #034f1b;
 }
 
 .followercount{
     position: absolute;
     left: 27px;
     top: 30px;
-    color: orange;
+    color: rgb(3, 70, 240);
 }
 
 .followingcount{
     position: absolute;
     right: 27px;
     top: 30px;
-    color: orange;
+    color: rgb(3, 70, 240);
 }
 
 
@@ -187,11 +195,11 @@ a{
 
 
 .profile-box button{
-    background: white;
-    color: #ff574a;
+    background: #fdefda;
+    color: #034f1b;
     border: none;
     outline: none;
-    box-shadow: 0 5px 10px rgba(224, 67, 54, 0.5);
+    box-shadow: 0 5px 10px rgba(7, 192, 68, 0.5);
     padding: 15px 60px;
     cursor: pointer;
     padding: 15px 60px;
